# CICD-for-SageMakerUnifiedStudio-public

./: README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/: dependabot.yml
.github/workflows/: analytic-data-notebooks.yml  analytic-ml-deployment.yml  analytic-ml-training.yml  catalog-import-export.yml  pr-tests.yml  publish-pypi.yml  serverless-pipeline-lifecycle.yml  slack-action-state-notification.yml  slack-pr-notification.yml  slack-weekly-summary.yml  smus-bundle-deploy.yml  smus-direct-deploy.yml  smus-multi-env-reusable.yml  smus-workflow-housekeeping.yml  test-destroy-command.yml  translate-docs.yml
.kiro/hooks/: translate-docs.json
.kiro/skills/: investigate-workflow-failure.md
.kiro/specs/datazone-catalog-import-export/: .config.kiro  design.md  requirements.md  tasks.md  testing-guide.md
.kiro/specs/deploy-dry-run/: .config.kiro  design.md  requirements.md  tasks.md  testing-guide.md
.kiro/steering/: aws-config.md  code-standards.md  test-workflow.md
developer/: AmazonQ.md  developer-guide.md
docs/: architecture.md  bootstrap-actions.md  catalog-import-export-guide.md  catalog-import-export-quick-reference.md  cli-commands.md  connections.md  development.md  examples-guide.md  github-actions-integration.md  github-workflow-application-guide.md  manifest-schema.md  manifest.md  mcp-configuration.md  pipeline-deployment-metrics.md  pypi-publishing.md  q-cli-conversation-examples.md  quicksight-deployment.md  rollback-guide.md  substitutions-and-variables.md
docs/getting-started/: README.md  admin-quickstart.md  quickstart.md
docs/langs/: README.md
docs/scripts/: fix-hebrew-code-blocks.py  translate-hebrew-only.py  translate-readme-batch.py  translate-readme-chunked.py
examples/: DemoMarketingBundle.yaml  README.md  TestBundle.yaml  cleanup-demo-resources.sh  demo-manifest.yaml  full-pipeline-lifecycle.sh  quicksight-bootstrap-example.yaml
examples/catalog-import-export/: README.md  manifest.yaml  seed_catalog_data.py
examples/mwaa-example/: DemoMarketingPipeline-MWAA.yaml  README.md
examples/serverless-example/: DemoMarketingPipeline-Serverless.yaml  README.md
git-templates/: README.md  smus-deploy-reusable.yml  smus-multi-env-reusable.yml
git-templates/bundle-based/: standalone-application-workflow.yml
git-templates/direct-branch/: org-application-workflow.yml  org-template-workflow.yml  standalone-application-workflow.yml
git-templates/hybrid-bundle-branch/: org-application-workflow.yml  org-template-workflow.yml
src/smus_cicd/: __init__.py  cli.py  resource_types.py
tests/: run_tests.py  setup-integ-env.sh  test_deploy_yaml_resolution.py  test_notebook_download.py
tests/integration/: __init__.py  base.py
tests/scripts/: delete_all_workflows.py  download_workflow_outputs_from_xcom.py
tests/unit/: __init__.py  test_bundle.py  test_catalog_export_config.py  test_create.py  test_describe.py  test_describe_comprehensive.py  test_describe_new_features.py  test_domain_config.py  test_eventbridge_client.py  test_mcp_server.py  test_quicksight_helper.py  test_quicksight_permissions.py  test_region_config_regression.py  test_workflow_helpers.py  test_workflow_version_quota.py
(+173 files in other folders)
