[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aws-smus-cicd-cli"
version = "1.0.0"
authors = [
    {name = "AWS SageMaker Unified Studio Team", email = "sagemaker-unified-studio@amazon.com"},
]
description = "A CLI tool for managing CI/CD pipelines in SageMaker Unified Studio (SMUS)"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Build Tools",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]
keywords = ["sagemaker", "unified-studio", "cicd", "pipeline", "aws", "data-science", "mlops"]
dependencies = [
    "typer>=0.9.0",
    "pyyaml>=6.0",
    "boto3>=1.26.0",
    "botocore>=1.29.0",
    "jsonschema>=4.17.0",
    "rich>=13.0.0",
    "requests>=2.28.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-html>=3.1.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
    "safety>=3.6.2",
    "bandit>=1.7.0",
    "pip-audit>=2.9.0",
]

[project.scripts]
aws-smus-cicd-cli = "smus_cicd.cli:app"

[project.urls]
Homepage = "https://github.com/aws/CICD-for-SageMakerUnifiedStudio"
"Bug Tracker" = "https://github.com/aws/CICD-for-SageMakerUnifiedStudio/issues"
Documentation = "https://github.com/aws/CICD-for-SageMakerUnifiedStudio/tree/main/docs"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["*.yaml", "*.yml", "*.json"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.isort]
profile = "black"
line_length = 88
