[metadata]
name = smus-cicd-cli
version = 1.0
description = SMUS CI/CD Pipeline CLI
long_description = file: README.md
long_description_content_type = text/markdown

[options]
zip_safe = True
include_package_data = True
package_dir =
    = src
packages = find:

[options.packages.find]
where = src
exclude =
    test

[options.package_data]
smus_cicd =
    py.typed

[options.entry_points]
console_scripts =
    smus-cicd-cli = smus_cicd.cli:app

# Configuration for pytest
[tool:pytest]
xfail_strict = true
addopts =
    --verbose
    --cov smus_cicd
    --cov-config setup.cfg
    --cov-report term-missing
    --cov-report html:htmlcov
    --cov-report xml:coverage.xml
    --durations=5
    --color=yes
testpaths = tests
markers =
    unit: Unit tests
    integration: Integration tests
    slow: Slow running tests

# Coverage configuration
[coverage:run]
branch = true
source = src/

[coverage:html]
directory = htmlcov

[coverage:xml]
output = coverage.xml

# Code formatting configuration
[flake8]
ignore =
    E203,
    W503,
    E501,
max_line_length = 120
